# aa-py

./: .gitignore  MANIFEST.in  README.md  example_full_flow.py  pyproject.toml  verify_m1.py
.github/workflows/: ci.yml  python-app.yml
aa_py/: __init__.py  account.py  eip7702.py  hashing.py  models.py  nonce.py  provider.py  signer.py
aa_py/paymaster/: base.py  erc7677.py
tests/: test_basic.py  test_v09.py
