[project]
name = "aa-py-sdk"
version = "0.1.1"
description = "Production-grade Python SDK for ERC-4337 EntryPoint v0.9 & EIP-7702"
authors = [
    { name = "AA-PY Contributors" }
]
dependencies = [
    "web3>=7.0.0",
    "pydantic>=2.0.0",
    "eth-account>=0.11.0",
    "eth-abi>=4.0.0",
    "rlp>=3.0.0",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
